# -persona-chat

./: .gitignore  README.md  docker-compose.yml  skaffold.yaml
dev/nginx/conf.d/: default.conf
k8s/eck/base/: beat.yaml  ingress.yaml  kibana.yaml  logstash.yaml
k8s/ingresses/base/: gateway.yaml  ingress.yaml  kustomization.yaml  virtual-service.yaml
k8s/services/dashboard/: deployment.yaml  secret.yaml  service.yaml
k8s/web-client/: deployment.yaml  service.yaml
services/api-server/: Dockerfile  pyproject.toml
services/api-server/config/: settings.py
services/api-server/core/: logging_file_handler.py
services/backends/chatting/: .env.sample  Dockerfile  pyproject.toml
services/backends/chatting/apis/: urls.py
services/backends/chatting/apis/v1/: urls.py
services/backends/chatting/apis/v1/users/: serializers.py  urls.py  views.py
services/backends/chatting/apps/chats/: admin.py  apps.py  models.py
services/backends/chatting/apps/chats/migrations/: 0001_initial.py
services/backends/chatting/apps/users/: admin.py  apps.py  models.py
services/backends/chatting/apps/users/migrations/: 0001_initial.py  0002_user_created_user_modified.py
services/backends/chatting/config/: asgi.py  settings.py  urls.py
services/backends/chatting/websockets/: urls.py
services/backends/chatting/websockets/v1/: urls.py
services/backends/chatting/websockets/v1/chats/: consumers.py  urls.py
services/frontends/container/: Dockerfile  package-lock.json  package.json
services/web-client/: .dockerignore  Dockerfile  package-lock.json
(+15 files in other folders)
