[tool.poetry]
name = "chatting"
version = "0.1.0"
description = ""
authors = ["parkyes90 <parkyes90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
