[tool.poetry]
name = "chatting"
version = "0.1.0"
description = ""
authors = ["parkyes90 <parkyes90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
channels = "^4.0.0"
channels-redis = "^4.1.0"
django-environ = "^0.10.0"
psycopg = "^3.1.8"
django-redis = "^5.2.0"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.1"
drf-spectacular-sidecar = "^2023.4.1"
djangorestframework-camel-case = "^1.4.2"
django-cors-headers = "^3.14.0"
django-extensions = "^3.2.1"
daphne = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
